RESOLVED FIXED269080
[WGSL] shader,validation,decl,var:initializer_kind:* is failing
https://bugs.webkit.org/show_bug.cgi?id=269080
Summary [WGSL] shader,validation,decl,var:initializer_kind:* is failing
Tadeu Zagallo
Reported 2024-02-09 10:25:00 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-09 10:25:13 PST
Tadeu Zagallo
Comment 2 2024-02-13 08:14:32 PST
EWS
Comment 3 2024-02-14 02:34:23 PST
Committed 274615@main (cedb0d4044f0): <https://commits.webkit.org/274615@main> Reviewed commits have been landed. Closing PR #24342 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.