[WGSL] shader,validation,decl,var:initializer_kind:* is failing https://bugs.webkit.org/show_bug.cgi?id=269080 rdar://122652837

Reviewed by Mike Wyrzykowski.

Validate that global variables do not use other global variables or call
user-defined functions in their initializers.

* Source/WebGPU/WGSL/TypeCheck.cpp:
(WGSL::TypeChecker::visitVariable):
(WGSL::TypeChecker::visit):
(WGSL::TypeChecker::isModuleScope const):

Canonical link: https://commits.webkit.org/274615@main