Source/WebGPU/WGSL/TypeCheck.cpp
@@ -186,6 +186,8 @@ private:
     void allocateSimpleConstructor(ASCIILiteral, TargetConstructor, Arguments&&...);
     void allocateTextureStorageConstructor(ASCIILiteral, Types::TextureStorage::Kind);
 
+    bool isModuleScope() const;
+
     std::optional<AccessMode> accessMode(AST::Expression&);
     std::optional<TexelFormat> texelFormat(AST::Expression&);
     std::optional<AddressSpace> addressSpace(AST::Expression&);
@@ -589,7 +591,7 @@ void TypeChecker::visitVariable(AST::Variable& variable, VariableKind variableKi
         if ((addressSpace == AddressSpace::Storage || addressSpace == AddressSpace::Uniform || addressSpace == AddressSpace::Handle || addressSpace == AddressSpace::Workgroup) && variable.maybeInitializer())
             return error("variables in the address space '", toString(addressSpace), "' cannot have an initializer");
         if (addressSpace != AddressSpace::Workgroup && result->containsOverrideArray())
-            return error("array with an 'override' element count can only be used as the store type of a 'var<workgroup>'");
+            return error("");
     }
 
     if (value && !isBottom(result))
@@ -640,6 +642,8 @@ void TypeChecker::visit(AST::Function& function)
 
     const Type* functionType = m_types.functionType(WTFMove(parameters), m_returnType);
     introduceFunction(function.name(), functionType);
+
+    m_returnType = nullptr;
 }
 
 // Attributes
@@ -1088,18 +1092,23 @@ void TypeChecker::visit(AST::BinaryExpression& binary)
 void TypeChecker::visit(AST::IdentifierExpression& identifier)
 {
     auto* binding = readVariable(identifier.identifier());
-    if (!binding) {
+    if (UNLIKELY(!binding)) {
         typeError(identifier.span(), "unresolved identifier '", identifier.identifier(), "'");
         return;
     }
 
-    if (binding->kind != Binding::Value) {
+    if (UNLIKELY(binding->kind != Binding::Value)) {
         typeError(identifier.span(), "cannot use ", bindingKindToString(binding->kind), " '", identifier.identifier(), "' as value");
         return;
     }
 
-    if (binding->evaluation > m_evaluation) {
+    if (UNLIKELY(binding->evaluation > m_evaluation)) {
         typeError(identifier.span(), "cannot use ", evaluationToString(binding->evaluation), " value in ", evaluationToString(m_evaluation), " expression");
+        return;
+    }
+
+    if (UNLIKELY(isModuleScope() && std::holds_alternative<Types::Reference>(*binding->type))) {
+        typeError(identifier.span(), "var '", identifier.identifier(), "' cannot be referenced at module scope");
         return;
     }
 
@@ -1185,12 +1194,17 @@ void TypeChecker::visit(AST::CallExpression& call)
                 auto& functionType = std::get<Types::Function>(*targetBinding->type);
                 auto numberOfArguments = call.arguments().size();
                 auto numberOfParameters = functionType.parameters.size();
-                if (m_evaluation < Evaluation::Runtime) {
+                if (UNLIKELY(m_evaluation < Evaluation::Runtime)) {
                     typeError(call.span(), "cannot call function from ", evaluationToString(m_evaluation), " context");
                     return;
                 }
 
-                if (numberOfArguments != numberOfParameters) {
+                if (UNLIKELY(isModuleScope())) {
+                    typeError(call.span(), "functions cannot be called at module scope");
+                    return;
+                }
+
+                if (UNLIKELY(numberOfArguments != numberOfParameters)) {
                     const char* errorKind = numberOfArguments < numberOfParameters ? "few" : "many";
                     typeError(call.span(), "funtion call has too ", errorKind, " arguments: expected ", String::number(numberOfParameters), ", found ", String::number(numberOfArguments));
                     return;
@@ -2139,6 +2153,11 @@ void TypeChecker::setConstantValue(Node& expression, const Type* type, const Con
     }
     expression.setConstantValue(value);
     convertValue(expression.span(), type, expression.m_constantValue);
+}
+
+bool TypeChecker::isModuleScope() const
+{
+    return !m_returnType;
 }
 
 
